# pimemento

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-postgres.txt
docs/: ARCHITECTURE.md  COMPARISONS.md  TRIGGERING.md
examples/: embedded_in_mcp.py  multi_mcp_architecture.py  standalone_quickstart.py  team_workflow.py
migrations/: 001_init.sql
src/pimemento/: __init__.py  config.py  embedded.py  server.py  tools.py
src/pimemento/backends/: __init__.py  base.py  json_backend.py  postgres_backend.py
src/pimemento/embeddings/: __init__.py  base.py  local_embedder.py  openai_embedder.py
tests/: conftest.py  test_backend_contract.py  test_config.py  test_json_backend.py  test_postgres_backend.py  test_search.py  test_security.py  test_semantic_dedup.py  test_tools.py
