[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pimemento"
version = "1.0.0"
description = "Shared memory layer for AI teams. Multi-tenant. Cross-MCP. Schema-less."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jérémy Music", email = "music.jeremy@gmail.com" },
]
keywords = ["mcp", "memory", "ai", "teams", "pgvector", "llm", "agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
]
embeddings-local = [
    "sentence-transformers>=2.2.0",
]
embeddings-openai = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
pimemento = "pimemento.server:main"

[project.urls]
Homepage = "https://pimemento.ai"
Repository = "https://github.com/JrmHsr/pimemento"
Documentation = "https://github.com/JrmHsr/pimemento#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/pimemento"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
